[02/07/2021 15:01]
- Added "Source Code" link to main site

[02/07/2021 14:57]
- Added "Work In Progress" to main site
- Changed main site look

[02/07/2021 13:40]
- Added "azapru.github.io/tests" link to main page (not working right now / error 404)

[02/07/2021 13:13]
- Changed vwdsY1.gif file
- Added changelog.txt file
- Updated main redirect site (image, more links)