@@ -1,0 +1,30 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Azapru</title>
+		<style>
+			h1 {text-align: center; font-family:verdana;}
+			p {text-align: center; font-family:verdana;}
+			div {text-align: center; font-family:verdana;}
+			a {text-align: center; font-family:verdana;}
+		</style>
+
+	</head>
+	<body>
+		
+		<h1>azapru.github.io</h1>
+		<br>
+		<h1>My random test sites:</h1>
+		<br>
+		<p>soon. check back later</p>
+		<br>
+		<div style="text-align:center">
+			<a href="https://azapru.github.io">go back</a>
+		</div>
+		<br>
+		<center><img src="E459HTTXEAguYyO.jpg" alt="wip" class="center"></center>
+		<br>
+		<br>
+		<p>coded by Azapru</p>
+	</body>
+</html> 
